card img spacing fixed and opacity of the top

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -15,16 +15,17 @@ div {
 }
 nav {
     text-align: center;
-    background-color: hsl(76, 7%, 42%);
+    background-color: hsl(76, 7%, 42%, .25);
     display: flex;
     justify-content: space-around;
 }
 nav a {
-    color: #134266;
+    color: #78c5d7;
     font-weight: bold;
     text-decoration: none;
     text-align: center;
     padding: 35px;
+    font-family: Poppins, "Avenir Next LT Pro Demi", "Arial Nova";
 }
 #hero {
     display: grid;
@@ -70,7 +71,7 @@ body {
     padding: 0;
 }
 header {
-    background-color: #134266;
+    background-color: hsl(206, 69%, 24%, .25);
     display: grid;
     grid-template-columns: 150px auto;
 }
@@ -79,7 +80,7 @@ header {
     grid-template-columns: repeat(10,1fr);
 }
 a:hover {
-    background-color: #78c5d7;
+    background-color: #134266;
     text-decoration: underline;
 }
 .book, .join {
@@ -115,7 +116,7 @@ a:hover {
     font-size: .8em;
     padding-bottom: 15px;
 }
-h4, footer h3, footer a, nav a {
+h4, footer h3, footer a {
     color: #134266;
     font-family: Poppins, "Avenir Next LT Pro Demi", "Arial Nova";
 }
@@ -130,21 +131,21 @@ h4, footer h3, footer a, nav a {
     transform: scale(1.1);
 }
 .rivers-card { 
-    margin-top: 200px;
+    margin: 100px 0;
     color: #134266;
     font-family: Poppins, "Avenir Next LT Pro Demi", "Arial Nova";
     grid-column: 2/4;
     grid-row: 2/3;
 }
 .rapids-card {
-    margin-top: 200px;
+    margin: 100px 0;
     color: #134266;
     font-family: Poppins, "Avenir Next LT Pro Demi", "Arial Nova";
     grid-column: 8/10;
     grid-row: 2/3;
 }
 .camping-card {
-    margin-top: 200px;
+    margin: 100px 0;
     color: #134266;
     font-family: Poppins, "Avenir Next LT Pro Demi", "Arial Nova";
     grid-column: 5/7;
@@ -207,6 +208,10 @@ footer {
     nav a {
         display: block;
         padding: 15px;
+        color:#134266
+    }
+    a:hover {
+        background-color: #78c5d7;
     }
     #hero {
         margin-top: 0;
@@ -235,5 +240,11 @@ footer {
     }
     footer {
         margin-top: 25px;
+    }
+    header {
+        background-color: #134266;
+    }
+    nav {
+        background-color: #6f7364;
     }
 }
